# AoC_2022_in_C

./: .gitignore  CMakeLists.txt  README.md
aoc/: CMakeLists.txt  aoc.c  aoc.h  array.c  array.h  data.c  data.h  runner.c  runner.h  testHelpers.h  utils.c  utils.h
day01/: CMakeLists.txt  main.c  part1.c  part2.c
day02/: CMakeLists.txt  main.c  part1.c  part2.c  shared.c  shared.h
tests/: CMakeLists.txt  intArraySortingTests.c  intArrayTests.c
